--- a/Framework/Intersect.Framework/Configuration/ConfigurationStrings.resx
+++ b/Framework/Intersect.Framework/Configuration/ConfigurationStrings.resx
@@ -18,7 +18,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConsoleService_NonFatalErrorOccurredDuringCommandParsing" xml:space="preserve">
-    <value>Non-fatal error occurred during command parsing.</value>
+  <data name="CopyTo_TypeMismatch" xml:space="preserve">
+    <value>Cannot copy from {0} to {1}.</value>
+  </data>
+  <data name="ServicesNotSet" xml:space="preserve">
+    <value>{0} has not be set yet, which is normally done by {1}</value>
   </data>
 </root>
